--- a/index.html
+++ b/index.html
@@ -253,6 +253,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-  text-algin:center;"> Anh</div>;
+  text-n:center;">Anh</div>;
  </BODY> 
 </HTML>
