--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   height: 100%;
   padding: 0;
   margin: 0;
-  background: rgba(0, 0, 0, 0.851);
+  background:#ffe4e1;
 }
 canvas {
   position: absolute;
@@ -205,7 +205,7 @@ var ParticlePool = (function() {
     }
     context.closePath();
     // create the fill
-    context.fillStyle = '#f50b02';
+    context.fillStyle = '#ffc0cb';
     context.fill();
     // create the image
     var image = new Image();
@@ -252,7 +252,7 @@ var ParticlePool = (function() {
     render();
   }, 10);
 })(document.getElementById('pinkboard'));
+   text-align:center;">Anh</div>;
   </script>
-  text-n:center;">Anh</div>;
  </BODY> 
 </HTML>
