--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ var ParticlePool = (function() {
     render();
   }, 10);
 })(document.getElementById('pinkboard'));
-   text-align:center;">Anh</div>;
   </script>
+  <text-align:center;">Anh</div>;
  </BODY> 
 </HTML>
