--- a/index.html
+++ b/index.html
@@ -253,6 +253,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-  <text-align:center;">Anh</div>;
+  <text-align:center;color:#f5d7f7;"> Ngọc Anh</div>
  </BODY> 
 </HTML>
