--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   height: 100%;
   padding: 0;
   margin: 0;
-  background:#ffe4e1;
+  background:#dcdcdc;
 }
 canvas {
   position: absolute;
@@ -253,6 +253,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-  <text-align:center;color:'#f5d7f7';"> Ngọc Anh</div>
+  <text-align:center;color:white;"> Ngọc Anh</div>
  </BODY> 
 </HTML>
