--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   height: 100%;
   padding: 0;
   margin: 0;
-  background:#dcdcdc;
+  background:black;
 }
 canvas {
   position: absolute;
@@ -253,6 +253,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-  <text-align:center;color:white;"> Ngọc Anh</div>
+<h2 align="center"><font color="white">Ngọc A</h2>
  </BODY> 
 </HTML>
