--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ var settings = {
     duration:   4, // particle duration in sec
     velocity: 80, // particle velocity in pixels/sec
     effect: -1.3, // play with this for a nice effect
-    size: 10 , // particle size in pixels
+    size: 9 , // particle size in pixels
   },
 };
 /*
@@ -253,6 +253,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-<h2 align="center"><font color="white">Ngọc A</h2>
+<h2 align="center"><font color="white">Ngọc Anh </h2>
  </BODY> 
 </HTML>
