--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   height: 100%;
   padding: 0;
   margin: 0;
-  background:black;
+  background:White ;
 }
 canvas {
   position: absolute;
@@ -253,6 +253,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-<h2 align="center"><font color="white">Ngọc Anh </h2>
+<h2 align="center"><font color="Black"> My Love</h2>
  </BODY> 
 </HTML>
