--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   padding: 0;
   margin: 0;
   body {
-  background-image: url('https://github.com/Hamelsie/Qu-c-a-Ng-c-ANh-/issues/2#issue-1614577443');
+  background-image: url('https://photos.app.goo.gl/Pob7koRmELYKwyi67');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -257,6 +257,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-<h2 align="center"><font color="Black">Ngọc Anh</h2>
+<h2 align="center"><font color="Black">08/03 vui vẻ </h2>
  </BODY> 
 </HTML>
