--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   body {
   background-image: url('https://i.imgur.com/yZywkjt.png');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size:contain;
 }
 }
 canvas {
@@ -209,7 +209,7 @@ var ParticlePool = (function() {
     }
     context.closePath();
     // create the fill
-    context.fillStyle = '#ffc0cb';
+    context.fillStyle = '#feafa2';
     context.fill();
     // create the image
     var image = new Image();
@@ -257,6 +257,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-<h2 align="center"><font color="Black">08/03 vui vẻ </h2>
+<h2 align="center"><font color="Black"></h2>
  </BODY> 
 </HTML>
