--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   body {
   background-image: url('https://i.imgur.com/yZywkjt.png');
   background-repeat: no-repeat;
-  background-size:contain;
+  background-size: 1920px 1080px;
 }
 }
 canvas {
