--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   body {
   background-image: url('https://i.imgur.com/yZywkjt.png');
   background-repeat: no-repeat;
-  background-size:1280px 1024px;
+  background-size:1024px 768px;
 }
 }
 canvas {
@@ -257,6 +257,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-<h2 align="center"><font color="Black"></h2>
+<h2 align="center"><font color="White">All the best</h2>
  </BODY> 
 </HTML>
