--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   body {
   background-image: url('https://i.imgur.com/yZywkjt.png');
   background-repeat: no-repeat;
-  background-size:1024px 768px;
+  background-size:1280px x 768px;
 }
 }
 canvas {
