--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   padding: 0;
   margin: 0;
   body {
-  background-image: url('https://i.imgur.com/yZywkjt.png');
+  background-image: url('https://i.imgur.com/QZRUAwV.png');
   background-repeat: no-repeat;
-  background-size:1280px x 768px;
+  background-size:1080px x 1080 px;
 }
 }
 canvas {
