--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   body {
   background-image: url('https://i.imgur.com/QZRUAwV.png');
   background-repeat: no-repeat;
-  background-size:1080px x 1080 px;
+  background-size:cover;
 }
 }
 canvas {
