--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   padding: 0;
   margin: 0;
   body {
-  background-image: url('https://i.imgur.com/QZRUAwV.png');
+  background-image: url('https://i.imgur.com/eFqgu3m.png');
   background-repeat: no-repeat;
   background-size:cover;
 }
