--- a/index.html
+++ b/index.html
@@ -257,6 +257,6 @@ var ParticlePool = (function() {
   }, 10);
 })(document.getElementById('pinkboard'));
   </script>
-<h2 align="center"><font color="White">All the best</h2>
+<h2 align="center"><font color="White"></h2>
  </BODY> 
 </HTML>
