--- a/index.html
+++ b/index.html
@@ -25,62 +25,65 @@ canvas {
 }
   </style>
  </HEAD>
- <html>
+<!DOCTYPE html>
+<html>
 <head>
-<title>Heartbeat Animation</title>
-<style type="text/css">
-    .heart {
-        position: absolute;
-        width: 100px;
-        height: 90px;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        background: #F00;
-        border-radius: 50px 50px 0 0;
-        transform-origin: 50% 90%;
-        animation: heartbeat 1s ease-in-out infinite;
-    }
-    .heart:before,
-    .heart:after {
-        position: absolute;
-        content: "";
-        left: 50px;
-        top: 0;
-        width: 50px;
-        height: 80px;
-        background: #F00;
-        border-radius: 50px 50px 0 0;
-    }
-    .heart:after {
-        left: 0;
-        border-radius: 0 0 50px 50px;
-    }
-    @keyframes heartbeat {
-        0% {
-            transform: scale(0.8);
-        }
-        20% {
-            transform: scale(1);
-        }
-        40% {
-            transform: scale(0.8);
-        }
-        60% {
-            transform: scale(1);
-        }
-        80% {
-            transform: scale(0.8);
-        }
-        100% {
-            transform: scale(0.8);
-        }
-    }
-</style>
+	<meta charset="utf-8">
+	<title>Heartbeat Animation</title>
+	<style>
+		.heart {
+			width: 50px;
+			height: 50px;
+			background-color: #ff4d4d;
+			position: relative;
+			animation: heartbeat 1s linear infinite;
+			transform-origin: center;
+			border-radius: 50%;
+			margin: 50px;
+			display: inline-block;
+		}
+		.heart:after,
+		.heart:before {
+			content: "";
+			position: absolute;
+			background-color: #ff4d4d;
+			border-radius: 50%;
+		}
+		.heart:before {
+			width: 50px;
+			height: 50px;
+			top: -25px;
+			left: 0;
+		}
+		.heart:after {
+			width: 50px;
+			height: 50px;
+			top: 0;
+			left: 25px;
+		}
+		@keyframes heartbeat {
+			0% {
+				transform: scale(0.75);
+			}
+			20% {
+				transform: scale(1);
+			}
+			40% {
+				transform: scale(0.75);
+			}
+			60% {
+				transform: scale(1);
+			}
+			80% {
+				transform: scale(0.75);
+			}
+			100% {
+				transform: scale(0.75);
+			}
+		}
+	</style>
 </head>
 <body>
-<div class="heart"></div>
+	<div class="heart"></div>
 </body>
 </html>
-
-</HTML>
