--- a/index.html
+++ b/index.html
@@ -28,62 +28,41 @@ canvas {
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Heartbeat Animation</title>
-	<style>
-		.heart {
-			width: 50px;
-			height: 50px;
-			background-color: #ff4d4d;
+	<title>Heartbeat</title>
+	<style type="text/css">
+		#heart {
+			width: 100px;
+			height: 90px;
 			position: relative;
-			animation: heartbeat 1s linear infinite;
-			transform-origin: center;
-			border-radius: 50%;
-			margin: 50px;
-			display: inline-block;
+			margin: auto;
+			margin-top: 50px;
 		}
-		.heart:after,
-		.heart:before {
+		#heart:before,
+		#heart:after {
 			content: "";
 			position: absolute;
-			background-color: #ff4d4d;
-			border-radius: 50%;
-		}
-		.heart:before {
-			width: 50px;
-			height: 50px;
-			top: -25px;
-			left: 0;
-		}
-		.heart:after {
-			width: 50px;
-			height: 50px;
+			left: 50px;
 			top: 0;
-			left: 25px;
+			width: 50px;
+			height: 80px;
+			background: #feafa2;
+			-webkit-border-radius: 50px 50px 0 0;
+			border-radius: 50px 50px 0 0;
+			-webkit-transform: rotate(-45deg);
+			transform: rotate(-45deg);
+			-webkit-transform-origin: 0 100%;
+			transform-origin: 0 100%;
 		}
-		@keyframes heartbeat {
-			0% {
-				transform: scale(0.75);
-			}
-			20% {
-				transform: scale(1);
-			}
-			40% {
-				transform: scale(0.75);
-			}
-			60% {
-				transform: scale(1);
-			}
-			80% {
-				transform: scale(0.75);
-			}
-			100% {
-				transform: scale(0.75);
-			}
+		#heart:after {
+			left: 0;
+			-webkit-transform: rotate(45deg);
+			transform: rotate(45deg);
+			-webkit-transform-origin: 100% 100%;
+			transform-origin: 100% 100%;
 		}
 	</style>
 </head>
 <body>
-	<div class="heart"></div>
+	<div id="heart"></div>
 </body>
 </html>
