--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ canvas {
 	<div id="heart"></div>
 	<div style="display: flex; justify-content: center; align-items: center;">
  </style>
- <font color="white">
+ <font color="black">
 <style>
 
   /* tăng kích thước chữ */
   .marquee-text {
-    font-size: 15px;
+    font-size: 30px;
 
   }
 
