--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ canvas {
 
   /* tăng kích thước chữ */
   .marquee-text {
-    font-size: 40px;
+    font-size:35 px;
 
   }
 
@@ -96,7 +96,7 @@ canvas {
 </style>
 <div class="marquee-container">
   <div class="marquee">
-  <div class="marquee-text">Chúc các công chúa ngày 08/03 vui vẻ👸🏻❤️.Mong các bạn lun hạnh phúc và an nhiên😘.Mong cho ai chưa có tình iu thì sẽ mau chóng tìm được nữa kia ai có rồi thì mong cho tình iu của các bạn đẹp như ngày đầu💞</div>
+  <div class="marquee-text">Chúc các công chúa ngày 08/03 vui vẻ👸🏻❤️.Mong các bạn lun hạnh phúc và an nhiên😘.</div>
   </div>
 </div>
 </body>
